'自作データセットの破損が発覚'

--- a/test/Yolo_trial/Yolo_train.ipynb
+++ b/test/Yolo_trial/Yolo_train.ipynb
@@ -1,6 +1,102 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "69b1f714",
+   "metadata": {},
+   "source": [
+    "# 学習データの読み込み\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7c8de63c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import torch\n",
+    "import torchvision.transforms as transforms\n",
+    "\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), '../..'))\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.append(project_root)\n",
+    "from src.my_app.core.MyDataset.OldMyDataset_speed import PreTrainDataset_old\n",
+    "import multiprocessing as mp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ed80c73f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "json データを読み込みました。\n",
+      "json データを読み込みました。\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Dataset ---\n",
+    "transform = transforms.Compose([\n",
+    "    # transforms.Resizeze((128, 128)),\n",
+    "    transforms.ToTensor()\n",
+    "])\n",
+    "test_doc_id_list = ['100241706', '100249371', '100249376', '100249416', '100249476', '100249537', '200003076', '200003803', '200003967', '200004107']\n",
+    "\n",
+    "train_dataset = dataset = PreTrainDataset_old(\n",
+    "    input_path='../../../kuzushiji-recognition/synthetic_images/input_images/',\n",
+    "    json_path='../../../kuzushiji-recognition/synthetic_images/gt_json.json',\n",
+    "    test_doc_id_list=test_doc_id_list,\n",
+    "    test_mode=False,\n",
+    "    # device=torch.device('cuda' if torch.cuda.is_available() else 'cpu'),\n",
+    "    # precompute_gt=True,\n",
+    "    precompute_gt=False,\n",
+    "    transform=transform,\n",
+    "    # target_width=400  # 横幅を400ピクセルに固定\n",
+    ")\n",
+    "\n",
+    "test_dataset = PreTrainDataset_old(\n",
+    "    input_path='../../../kuzushiji-recognition/synthetic_images/input_images/',\n",
+    "    json_path='../../../kuzushiji-recognition/synthetic_images/gt_json.json',\n",
+    "    test_doc_id_list=test_doc_id_list,\n",
+    "    test_mode=True,\n",
+    "    # device=torch.device('cuda' if torch.cuda.is_available() else 'cpu'),\n",
+    "    # precompute_gt=True,\n",
+    "    precompute_gt=False,\n",
+    "    transform=transform,\n",
+    "    # target_width=400  # 横幅を400ピクセルに固定\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# 最適化されたDataLoaderの作成\n",
+    "train_dl = PreTrainDataset_old.create_optimized_dataloader_for_old_dataset(\n",
+    "    train_dataset,\n",
+    "    batch_size=1,\n",
+    "    num_workers=min(mp.cpu_count(), 4)\n",
+    ")\n",
+    "test_dl = PreTrainDataset_old.create_optimized_dataloader_for_old_dataset(\n",
+    "    test_dataset,\n",
+    "    batch_size=1,\n",
+    "    num_workers=min(mp.cpu_count(), 4)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edd7e14a",
+   "metadata": {},
+   "source": [
+    "# YOLOによる学習"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b5567cbb",
@@ -171,7 +267,7 @@
     "        \n",
     "        heat_obj = HeatmapTrainer(model=model, loss_fn=fl)\n",
     "\n",
-    "\n",
+    "        for \n",
     "        image = Image.open(\"ultralytics/models/yolo/detect/100241706_sep_100241706_00002_1.jpg\")\n",
     "        image_tensor = transform(image).unsqueeze(0)  # バッチ次元を追加\n",
     "        print(f\"Image tensor shape: {image_tensor.shape}\")\n",
