--- a/test/test_unet.ipynb
+++ b/test/test_unet.ipynb
@@ -2637,7 +2637,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kuzushiji",
+   "display_name": "torch_env",
    "language": "python",
    "name": "python3"
   },
@@ -2651,7 +2651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
