--- a/test/test_loss_func.ipynb
+++ b/test/test_loss_func.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "86cccf60",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "fbb691e4",
    "metadata": {},
    "outputs": [
@@ -38,8 +38,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "before loadGT 4965\n",
       "json データを読み込みました。\n",
-      "json データを読み込みました。\n"
+      "after loadGT 4965\n",
+      "before loadGT 1143\n",
+      "json データを読み込みました。\n",
+      "after loadGT 1143\n"
      ]
     }
    ],
